--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -30,6 +30,12 @@
         org.springframework.web.context.request.RequestContextListener
     </listener-class>
 </listener>
+<listener>
+    <listener-class>
+      org.springframework.security.web.session.HttpSessionEventPublisher
+    </listener-class>
+  </listener>
+
 
 	<context-param>
         <param-name>contextConfigLocation</param-name>
