--- a/pom.xml
+++ b/pom.xml
@@ -52,11 +52,24 @@
               <version>${spring.version}</version>
         </dependency>
         
+        <dependency>
+    <groupId>commons-io</groupId>
+    <artifactId>commons-io</artifactId>
+    <version>2.5</version>
+</dependency>
+
+<dependency>
+   <groupId>commons-fileupload</groupId>
+   <artifactId>commons-fileupload</artifactId>
+   <version>1.3.2</version> <!-- makesure correct version here -->
+</dependency>
+        
 <dependency>
   <groupId>org.springframework</groupId>
   <artifactId>spring-beans</artifactId>
   <version>${spring.version}</version>
 </dependency>
+
 
 <dependency>
     <groupId>org.springframework</groupId>
@@ -94,6 +107,12 @@
             <artifactId>spring-security-config</artifactId>
             <version>${spring-security.version}</version>
         </dependency>
+        
+        <dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-taglibs</artifactId>
+    <version>${spring-security.version}</version>
+</dependency>
 
         <dependency>
             <groupId>org.hibernate</groupId>
